# Phraseanet-Indexer

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  changelog.txt  configure.ac  phraseanet_indexer  todo.txt
WIN32/: How_to_build_win32.txt  Phraseanet-Indexer.sln  Phraseanet-Indexer.vcproj  customprops.vsprops  important pour resources (.rc).txt  messages.h  messages.mc  nt_service.h  syslog_win32.cpp  syslog_win32.h
WIN32/CIndexerProject/: messages.mc  phraseanet_cindexer.vcproj
WIN32/res/: messages.rc
_WIN32 (visual C++ 2008)/: How_to_build_win32.txt  Phraseanet-Indexer.rc  Phraseanet-Indexer.sln  Phraseanet-Indexer.vcproj  customprops.vsprops  syslog_win32.cpp  syslog_win32.h
cindexer/: changelog.txt
cindexer/WIN32/CIndexerProject/: customprops.vsprops  important pour resources (.rc).txt  messages.h  syslog_win32.h
cindexer/src/: _version.h  connbas_dbox.cpp  connbas_dbox.h  dom.cpp  platform_dependent.h  thesaurus.cpp
libstemmer_c/: Makefile  libstemmer.la
src/: Makefile.am  Makefile.in  _syslog.cpp  _syslog.h  _version.h  callback_record.cpp  connbas.cpp  connbas.h  connbas_abox.cpp  connbas_dbox.cpp  connbas_dbox.h  consts.h  dom.cpp  dom.h  indexer.cpp  indexer.h  lownodiacritics_utf8.cpp  main.cpp  phrasea_clock_t.cpp  phrasea_clock_t.h  platform_dependent.h  sbas.cpp  sbas.h  stemmer_grp.h  thesaurus.cpp  unicode.cpp
xNIX/: syslog_xnix.cpp  syslog_xnix.h
