#AUTOMAKE_OPTIONS = foreign no-dependencies no-define no-dist no-installinfo


# what flags you want to pass to the C compiler & linker
#CFLAGS = --pedantic -Wall -std=c99 -O2


# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
#bin_PROGRAMS = phraseanet_indexer
#phraseanet_indexer_SOURCES = \
#    main.cpp \
#    _version.h \
#    callback_record.cpp \
#    connbas.cpp \
#    connbas_abox.cpp \
#    connbas_dbox.cpp \
#    dom.cpp \
#    indexer.cpp \
#    lownodiacritics_utf8.cpp \
#    phrasea_clock_t.cpp \
#    sbas.cpp \
#    thesaurus.cpp \
#    trace_memory.cpp \
#    sockets.cpp \
#    ../xNIX/syslog_xnix.cpp

